estatisticas e melhorias no front

--- a/frontend/src/app/routes/test/personality/personality.component.html
+++ b/frontend/src/app/routes/test/personality/personality.component.html
@@ -14,7 +14,7 @@
         </div>
         <div class="container">
             <h2>Galáxia</h2>
-            <div class="card animate__animated animate__fadeInDown" style="animation-delay: 200ms;">
+            <div class="card animate__animated animate__fadeInDown" style="animation-delay: 200ms; background: #E45C7B;">
                 <button (click)="goToPersonality(1)" [disabled]="completionStatus['R']" [ngClass]="{'disabled-button': completionStatus['R']}">
                     <div style="display: flex; justify-content: space-between; align-items: center; text-align: left">
                         <div>
@@ -36,7 +36,7 @@
 
             <img class="dots animate__animated animate__fadeInDown" style="animation-delay: 700ms;" src="../../../../assets/images/icons/rocket.svg">
             
-            <div class="card animate__animated animate__fadeInDown" style="animation-delay: 500ms;">
+            <div class="card animate__animated animate__fadeInDown" style="animation-delay: 500ms; background: #36A2EB;">
                 <button (click)="goToPersonality(2)" [disabled]="completionStatus['I']" [ngClass]="{'disabled-button': completionStatus['I']}">
                     <div style="display: flex; justify-content: space-between; align-items: center; text-align: left">
                         <div>
@@ -58,7 +58,7 @@
 
             <img class="dots animate__animated animate__fadeInDown" style="animation-delay: 1100ms;" src="../../../../assets/images/icons/rocket.svg">
             
-            <div class="card animate__animated animate__fadeInDown" style="animation-delay: 800ms;">
+            <div class="card animate__animated animate__fadeInDown" style="animation-delay: 800ms; background: #E4BA54;">
                 <button (click)="goToPersonality(3)" [disabled]="completionStatus['A']" [ngClass]="{'disabled-button': completionStatus['A']}">
                     <div style="display: flex; justify-content: space-between; align-items: center; text-align: left">
                         <div>
@@ -80,7 +80,7 @@
 
             <img class="dots animate__animated animate__fadeInDown" style="animation-delay: 1400ms;" src="../../../../assets/images/icons/rocket.svg">
             
-            <div class="card animate__animated animate__fadeInDown" style="animation-delay: 1100ms;">
+            <div class="card animate__animated animate__fadeInDown" style="animation-delay: 1100ms; background: #46ADB1;">
                 <button (click)="goToPersonality(4)" [disabled]="completionStatus['S']" [ngClass]="{'disabled-button': completionStatus['S']}">
                     <div style="display: flex; justify-content: space-between; align-items: center; text-align: left">
                         <div>
@@ -102,7 +102,7 @@
 
             <img class="dots animate__animated animate__fadeInDown" style="animation-delay: 1700ms;" src="../../../../assets/images/icons/rocket.svg">
             
-            <div class="card animate__animated animate__fadeInDown" style="animation-delay: 1400ms;">
+            <div class="card animate__animated animate__fadeInDown" style="animation-delay: 1400ms; background: #7754CA;">
                 <button (click)="goToPersonality(5)" [disabled]="completionStatus['E']" [ngClass]="{'disabled-button': completionStatus['E']}">
                     <div style="display: flex; justify-content: space-between; align-items: center; text-align: left">
                         <div>
@@ -124,7 +124,7 @@
 
             <img class="dots animate__animated animate__fadeInDown" style="animation-delay: 2000ms;" src="../../../../assets/images/icons/rocket.svg">
             
-            <div class="card animate__animated animate__fadeInDown" style="animation-delay: 1700ms;">
+            <div class="card animate__animated animate__fadeInDown" style="animation-delay: 1700ms; background: #E49041;">
                 <button (click)="goToPersonality(6)" [disabled]="completionStatus['C']" [ngClass]="{'disabled-button': completionStatus['C']}">
                     <div style="display: flex; justify-content: space-between; align-items: center; text-align: left">
                         <div>
