--- a/frontend/src/app/routes/test/statement/statement.component.scss
+++ b/frontend/src/app/routes/test/statement/statement.component.scss
@@ -99,3 +99,63 @@ h4 {
     width: 0;
     transition: width 0.5s ease-in-out;
 }
+
+body.Realista {
+    background-color: #0C1020 !important;
+}
+.container-edge.Realista {
+    background-color: #302132 !important;
+}
+.card.Realista {
+    background-color: #513754 !important;
+}
+
+body.Investigativo {
+    background-color: #0C1020 !important;
+}
+.container-edge.Investigativo {
+    background-color: #1E314F !important;
+}
+.card.Investigativo {
+    background-color: #29436A !important;
+}
+
+body.Artístico {
+    background-color: #0C1020 !important;
+}
+.container-edge.Artístico {
+    background-color: #363633 !important;
+}
+.card.Artístico {
+    background-color: #51514C !important;
+}
+
+body.Social {
+    background-color: #0C1020 !important;
+}
+.container-edge.Social {
+    background-color: #214143 !important;
+}
+.card.Social {
+    background-color: #2D6161 !important;
+}
+
+body.Empreendedor {
+    background-color: #0C1020 !important;
+}
+.container-edge.Empreendedor {
+    background-color: #2B274D !important;
+}
+.card.Empreendedor {
+    background-color: #3D376E !important;
+}
+
+body.Convencional {
+    background-color: #0C1020 !important;
+}
+.container-edge.Convencional {
+    background-color: #3A3030 !important;
+}
+.card.Convencional {
+    background-color: #514343 !important;
+}
