--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -26,14 +26,14 @@ body {
 }
 
 .user-data {
-  display: flex !important;
-  align-items: center !important;
+  display: flex;
+  align-items: center;
 }
 
 .user-data .text-block {
-  display: flex !important;
-  flex-direction: column !important;
-  text-align: right !important;
+  display: flex;
+  flex-direction: column;
+  text-align: right;
   margin: 0;
 }
 
@@ -43,7 +43,7 @@ body {
   font-size: 18px;
   font-weight: 400;
   line-height: 16px;
-  margin-bottom: 8px;
+  margin: 4px 0 4px 0 !important;
 }
 
 .user-code {
@@ -53,6 +53,7 @@ body {
   font-weight: 400;
   line-height: 16px;
   margin-bottom: 0;
+  margin: 4px 0 4px 0 !important;
 }
 
 .galaxy {
@@ -61,6 +62,7 @@ body {
   flex-shrink: 0;
   margin-left: 12px;
 }
+
 
 .logo {
   color: #FFF;
@@ -131,16 +133,16 @@ h4 {
 .card {
   border-radius: 24px;
   border: 1px solid rgba(255, 255, 255, 0.05);
-  background: linear-gradient(180deg, #252C4A 0%, #252C4A 100%, #252C4A 100%);
+  background: #252C4A;
   box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.25);
   margin: 0 18px;
 }
 
 .card-text {
-  display: flex;
-  gap: 10px;
-  margin: 24px 4px 4px 24px;
-  align-items: flex-end;
+  display: flex !important;
+  gap: 10px !important;
+  margin: 24px 4px 4px 24px !important;
+  align-items: end !important;
 }
 
 .buttons {
