novas modais e temática

--- a/frontend/src/app/routes/test/creation/test-creation.component.html
+++ b/frontend/src/app/routes/test/creation/test-creation.component.html
@@ -4,7 +4,7 @@
       <div
         class="big-logo animate__animated animate__pulse animate__infinite animate__slow"
       >
-        <img src="./../../../../assets/images/logos/logo-verse.png" />
+        <img src="./../../../../assets/images/logos/logo-isla.png" />
       </div>
       <div class="screen-info">
         <h1>Criar um novo jogo</h1>
@@ -37,7 +37,7 @@
                 Informe um username
               </mat-error>
             </mat-form-field>
-            <div class="card-text">
+            <div class="card-text" style="text-align: left;">
               <h3>E-mail</h3>
               <h4>não é obrigatório</h4>
             </div>
@@ -81,7 +81,6 @@
           />
         </button>
       </a>
-      <img class="planets" src="./../../assets/images/items/planets.svg" />
     </div>
   </div>
 </body>
