--- a/frontend/src/app/routes/test/info-fase/info-fase.component.html
+++ b/frontend/src/app/routes/test/info-fase/info-fase.component.html
@@ -1,5 +1,5 @@
-<mat-dialog-content class="mat-typography">
-    <div class="content">
+<div class="modal-card">
+    <div class="modal-container">
         <h3 class="finish">Fase concluída!</h3>
         <p class="p-content">
             Deseja continuar ou voltar ao menu anterior?
@@ -20,4 +20,4 @@
             </button>
         </div>
     </div>
-</mat-dialog-content>
+</div>
