--- a/frontend/src/app/routes/test/personality/personality.component.scss
+++ b/frontend/src/app/routes/test/personality/personality.component.scss
@@ -11,6 +11,12 @@ h4 {
   margin: 16px 2px 4px 0;
 }
 
+h4 span {
+  background-color: #161D39;   
+  padding: 2px 6px;   
+  border-radius: 16px;            
+}
+
 .custom-progress-bar {
   height: 20px !important;
 }
