--- a/frontend/src/app/routes/test/statement/statement.component.scss
+++ b/frontend/src/app/routes/test/statement/statement.component.scss
@@ -101,7 +101,7 @@ h4 {
 }
 
 body.Realista {
-    background-color: #0C1020 !important;
+    background-color: #201621 !important;
 }
 .container-edge.Realista {
     background-color: #302132 !important;
@@ -114,14 +114,14 @@ body.Investigativo {
     background-color: #0C1020 !important;
 }
 .container-edge.Investigativo {
-    background-color: #1E314F !important;
+    background-color: #161D39 !important;
 }
 .card.Investigativo {
-    background-color: #29436A !important;
+    background-color: #252C4A !important;
 }
 
 body.Artístico {
-    background-color: #0C1020 !important;
+    background-color: #272724 !important;
 }
 .container-edge.Artístico {
     background-color: #363633 !important;
@@ -131,7 +131,7 @@ body.Artístico {
 }
 
 body.Social {
-    background-color: #0C1020 !important;
+    background-color: #132728 !important;
 }
 .container-edge.Social {
     background-color: #214143 !important;
@@ -141,7 +141,7 @@ body.Social {
 }
 
 body.Empreendedor {
-    background-color: #0C1020 !important;
+    background-color: #1B1930 !important;
 }
 .container-edge.Empreendedor {
     background-color: #2B274D !important;
@@ -151,7 +151,7 @@ body.Empreendedor {
 }
 
 body.Convencional {
-    background-color: #0C1020 !important;
+    background-color: #261F1F !important;
 }
 .container-edge.Convencional {
     background-color: #3A3030 !important;
