--- a/frontend/src/app/routes/home/home.component.scss
+++ b/frontend/src/app/routes/home/home.component.scss
@@ -1,9 +1,16 @@
-.container {
+.edge-container {
+  position: relative;
   width: 100%;
-  max-width: 393px;
-  margin: 0 auto;
-  padding-bottom: 88px;
-  margin-top:20%
+  height: 100vh;
+}
+
+.container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 393px;
+  max-width: 100%;
 }
 
 .big-logo img {
