--- a/frontend/src/app/routes/test/info-alert/info-alert.component.html
+++ b/frontend/src/app/routes/test/info-alert/info-alert.component.html
@@ -1,23 +1,18 @@
-<mat-dialog-content class="mat-typography">
-    <div class="content">
+<div class="modal-card">
+    <div class="modal-container">
+        <img src="../../../../assets/images/personagens/tommy-card.png">
         <h3 class="finish">Atenção!</h3>
-        <p class="p-content">
-            Tem certeza que deseja sair antes de concluir essa fase?
-        </p>
-        <p class="p-warning">
+        <h2>
+            Tem certeza que deseja sair antes de concluir a fase?
+        </h2>
+        <h4>
             O progresso só será salvo ao final de cada fase.
-        </p>
-        <div class="example-button-row">
-            <button mat-button mat-dialog-close class="button" style="background-color: #57a881;" (click)="goToPersonality()">
-                <p class="btn">
-                    Sair
-                </p>
-            </button>
-            <button mat-button mat-dialog-close class="button" style="background-color: #3C6A54;" (click)="continue()">
-                <p class="btn">
-                   Continuar
-                </p>
-            </button>
-        </div>
+        </h4>
+        <button mat-dialog-close id="modal-main-button" (click)="continue()">
+            Continuar
+        </button>
+        <button mat-dialog-close id="modal-secondary-button" (click)="goToPersonality()">
+                Sair
+        </button>
     </div>
-</mat-dialog-content>
+</div>
